# PracticaSonidoGustavo

./: .gitignore
Audio/Assets/Plugins/FMOD/Resources/: FMODStudioSettings.asset
Audios_Unity/PruebaCrossfade2/.cache/: {034ba547-7863-4f4c-a2a1-23db1d3daf4a}.pdc  {901b58cb-9aef-4b06-a664-545f3b548b02}.pdc  {e5ee76bc-4f72-470d-96a0-b706441cf2bc}.pdc
Audios_Unity/PruebaCrossfade2/.cache/buildrecords/Desktop/: Master.br
Audios_Unity/PruebaCrossfade2/.cache/fsbcache/Desktop/: 0E6F8938.fobj  A60CB707.fobj  A72870FA.fobj
Audios_Unity/PruebaCrossfade2/Metadata/: Tags.xml  Workspace.xml
Audios_Unity/PruebaCrossfade2/Metadata/Asset/: {b2f0ae46-c4ec-4ebc-ac2e-958c31a5e9b1}.xml
Audios_Unity/PruebaCrossfade2/Metadata/AudioFile/: {034ba547-7863-4f4c-a2a1-23db1d3daf4a}.xml
Audios_Unity/PruebaCrossfade2/Metadata/Bank/: {d719749f-0a44-47f6-b341-107541aac393}.xml
Audios_Unity/PruebaCrossfade2/Metadata/EffectPresetFolder/: {6d3bdcdb-2b9f-498a-9995-dab804e65e06}.xml
Audios_Unity/PruebaCrossfade2/Metadata/EncodingSetting/: {8901de96-e09b-48f1-9a9a-67bdb46f748c}.xml
Audios_Unity/PruebaCrossfade2/Metadata/Event/: {c77d6ae8-a474-45a3-8e67-dc1958196eb1}.xml
Audios_Unity/PruebaCrossfade2/Metadata/ParameterPreset/: {7a109bcc-6fd5-442d-8233-1b895281dee7}.xml
Audios_Unity/PruebaCrossfade2/Metadata/Platform/: {4c0f521b-c713-4385-ba82-635314d35aa1}.xml
Audios_Unity/PruebaCrossfade2/Metadata/SandboxFolder/: {3ed261a7-4ea4-444d-bbc3-cd9dde7cc747}.xml
Audios_Unity/PruebaCrossfade2/Metadata/SnapshotGroup/: {edbbbe7d-5d3f-4beb-b305-bb125572b574}.xml
CGame/: Readme.txt
CGame/src/: drawable.cpp  mainGame.cpp  sound.cpp
CTool/: CMakeLists.txt  Readme.txt
CTool/include/: audioNode.h  drawableEntity.h  graph.h  link.h  loader.h  sound.h
CTool/src/: audioNode.cpp  drawable.cpp  graph.cpp  link.cpp  main.cpp  mainTool.cpp  sound.cpp  ui.cpp
CTool/tools/: genProyect.bat
Unity/Audio/Assets/AudioBanks/Desktop/: Master.strings.bank
Unity/Audio/Assets/Old Sea Port/scenes/: Dock Thing.unity
Unity/Audio/Assets/Scenes/: BranchingScene.unity  CrossFadeScene.unity  SampleScene.unity
Unity/Audio/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity/Audio/Assets/Source/: Brancher.cs  EpicTrigger.cs  Layerer.cs  LoopableAmbiance.cs  MusicCrossFader.cs  OneShotEmitter.cs  RandomLayerToggling.cs
Unity/Audio/Assets/Source/Player/: PlayerController.cs
Unity/Audio/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Unity/FmodProject/Master/Metadata/: Tags.xml  Workspace.xml
Unity/FmodProject/Master/Metadata/Asset/: {9c5b33af-f714-4819-8957-1fcb09feb357}.xml  {dca08b0b-feb6-45c8-9a0b-61c8cff33061}.xml
Unity/FmodProject/Master/Metadata/AudioFile/: {05c5c75f-2e1b-43c7-b072-80c42db41bdd}.xml  {084f254c-019b-490e-ab69-e32f6c732163}.xml  {0e817226-9f2e-4c2c-9940-5644aad7a699}.xml  {1495b823-306e-4136-b617-55f182817d1c}.xml  {14aba867-5c72-498f-ae83-ea6337e49c02}.xml  {152dbe12-9256-4ba4-ba84-75e128b92973}.xml  {23749aaa-8c31-4e83-8a53-900e4c8737fa}.xml  {26da1e83-602d-464e-b575-970bcef2ea94}.xml  {2c86d38f-e0a1-4e10-8977-3b79422c078b}.xml  {2f23d2a1-a495-4aaa-9ca9-c0f526d5f1bd}.xml  {3040439c-9f22-4def-9c3a-789e5b277574}.xml  {318977c6-a383-41b0-9a1a-f293ffbdd5d2}.xml  {31d89fa8-66cd-48c1-a578-a3d56bc4eb24}.xml  {383e7acb-8e36-4fdb-b425-96570f50d433}.xml  {3b2b91c7-787f-4306-a7f7-a47520917f22}.xml  {3de86570-7c22-41e6-aa03-cbe49e028462}.xml  {479d2757-af47-431b-aadf-afa19a8ae58d}.xml  {48cb5d7a-3b00-4d25-8160-803e7c1e49d9}.xml  {4de90ead-829a-4276-9f16-2351e821f0d2}.xml  {4f04dad4-1cb9-47c8-a1ab-2905d9d4429f}.xml  {4fe0ee57-aaf9-4c9a-833b-e1bb2b97d650}.xml  {54c37cbf-b96f-45f7-a22e-1f23f4cf1510}.xml  {56d69d97-5f39-409a-8d00-efa6975ea159}.xml  {59ad6d88-3e9b-4a55-bd26-750c86fb44ab}.xml  {5fa95417-ff3f-447b-892e-e12619781bd6}.xml  {62bfa6f2-a7e1-4610-bfcd-8942f0e933fb}.xml  {63ee4028-df7a-45ca-b074-66e340be3d05}.xml  (+55 more)
Unity/FmodProject/PruebaCrossfade2/.cache/: {034ba547-7863-4f4c-a2a1-23db1d3daf4a}.pdc  {e5ee76bc-4f72-470d-96a0-b706441cf2bc}.pdc
Unity/FmodProject/PruebaCrossfade2/Metadata/: Master.xml  Mixer.xml
(+38 files in other folders)
